force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <description>Amostras de Novo Produto</description>
    <label>Amostra</label>
    <nameField>
        <label>Nome da Amostra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amostras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>