force-app/main/default/objects/Sample__c/fields/AccountFml__c.field-meta.xml
<CustomField>
    <fullName>AccountFml__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Opportunity__r.Account.Id, Opportunity__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>