force-app/main/default/objects/Sample__c/fields/CommentsTxt__c.field-meta.xml
<CustomField>
    <fullName>CommentsTxt__c</fullName>
    <label>Observações</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>