force-app/main/default/objects/Sample__c/fields/CostNmb__c.field-meta.xml
<CustomField>
    <fullName>CostNmb__c</fullName>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>