force-app/main/default/objects/Sample__c/fields/DeliveryTxt__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTxt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsabilidade pela entrega</label>
    <type>Checkbox</type>
</CustomField>