force-app/main/default/objects/Sample__c/fields/FreeSampleBln__c.field-meta.xml
<CustomField>
    <fullName>FreeSampleBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amostra grátis</label>
    <type>Checkbox</type>
</CustomField>