force-app/main/default/objects/Sample__c/fields/LengthBln__c.field-meta.xml
<CustomField>
    <fullName>LengthBln__c</fullName>
    <label>Comprimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>