force-app/main/default/objects/Sample__c/fields/MaterialTxt__c.field-meta.xml
<CustomField>
    <fullName>MaterialTxt__c</fullName>
    <label>Plástico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>