force-app/main/default/objects/Sample__c/fields/NetSalesPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>NetSalesPriceNmb__c</fullName>
    <label>Preço de venda líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>