force-app/main/default/objects/Sample__c/fields/OpptyStageTxt__c.field-meta.xml
<CustomField>
    <fullName>OpptyStageTxt__c</fullName>
    <label>Fase da Oportunidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualificação</fullName>
                <default>true</default>
                <label>Qualificação</label>
            </value>
            <value>
                <fullName>Análise Viabilidade técnica</fullName>
            </value>
            <value>
                <fullName>Análise Viabilidade comercial</fullName>
            </value>
            <value>
                <fullName>Geração de amostra</fullName>
            </value>
            <value>
                <fullName>Teste com cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>