force-app/main/default/objects/Sample__c/fields/OptyStageTxt__c.field-meta.xml
<CustomField>
    <fullName>OptyStageTxt__c</fullName>
    <defaultValue>&apos;Qualificação&apos;</defaultValue>
    <label>Fase Oportunidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>