force-app/main/default/objects/Sample__c/validationRules/ClosedOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedOpportunity</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Opportunity__r.StageName) == &apos;Ganho&apos; || 
TEXT(Opportunity__r.StageName) == &apos;Perdido&apos;</errorConditionFormula>
    <errorMessage>Não é possível criar uma amostra para uma oportunidade fechada.</errorMessage>
</ValidationRule>